# scrape23

./: .gitignore  README.md  pyproject.toml  scrape23  scrape23.toml  scrape23.toml.sample
scrape23/: README.md  config.py  scrape23  scrape23.py  scrape23.toml.sample
scrape23/src/: config.py  scrape23.py
src/: config.py  scrape23.py
