
[tool.poetry]
name = "scrape23"
version = "0.1.0"
description = "A simple utility to convert any Youtube channel into an audio podcast served from your webserver."
authors = ["jphuuskon"]
readme = "scrape23/README.md"
packages = [{include = "*", from="scrape23/src"}]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "*"
generss = "*"
lxml = "*"
humanfriendly = "^10.0"


[tool.poetry.scripts]
scrape23 = "scrape23:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

